# shinchoku-tairiku.satyh

./: .gitignore  Makefile  README.md  Satyristes  credit.satyh  footnote-scheme.satyh  install-fonts.sh  itemize.satyh  main.saty  sample.satyh  satysfi-class-shinchoku-tairiku-doc.opam  satysfi-class-shinchoku-tairiku.opam  shinchoku-tairiku.satyh
.github/workflows/: ci.yml
amutake/: main.satyh
doc/: credit.satyh  manual.saty
doc/author1/: main.satyh
doc/author2/: main.satyh
doc/author3/: main.satyh
example/: .gitignore  credit.satyh  fonts.txt  main.saty
example/author1/: main.satyh
pocketberserker/: main.satyh
satyh/: bibliography.satyh  captioned-box.satyh  command.satyh  config.satyh  itemize.satyh  side-index.satyh  table-of-contents.satyh  util.satyh
src/: bibliography.satyh  captioned-box.satyh  command.satyh  config.satyh  context.satyh  event-listeners.satyg  flex.satyh  footnote.satyh  graphics.satyh  header.satyh  headings.satyh  index-tab.satyh  label.satyg  link.satyh  preface.satyh  ref-num.satyg  ref-page.satyg  shinchoku-tairiku.satyh  side-index.satyh  table-of-contents.satyh  theorem.satyh  util.satyh
src/components/: bibliography.satyh  captioned-box.satyh  footnote.satyh  header.satyh  headings.satyh  index-tab.satyh  itemize.satyh  preface.satyh  table-of-contents.satyh  theorem.satyh
src/lib/: context.satyh  event-listeners.satyg  font.satyg  label.satyg  page-side.satyg  ref-num.satyg  ref-page.satyg
test/: .gitignore  bibliography.saty  build.sh  captioned-box.saty  check.sh  column.saty  header.saty  headings.saty  inline-commands.saty  itemize.saty  preface.saty  row.saty  table-of-contents.saty  theorem.saty  update.sh
yutopp/: main.satyh
